--- a/simple_workFlow_starter/pom.xml
+++ b/simple_workFlow_starter/pom.xml
@@ -26,6 +26,12 @@
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.stt</groupId>
+      <artifactId>simple_workFlow_core</artifactId>
+      <version>1.0-SNAPSHOT</version>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
 
 
